--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,14 @@
 body{
     margin: 0%;
     padding: 0%; 
-    background-image: url('/img/bg.jpg');
+    background-image: url('../img/bg.jpg');
     background-size: 90vh; 
 
+}
+
+.list{
+    list-style-type: none;
+    padding: 10px;
 }
 
 /* ########################## TOPO DO SITE ########################## */
@@ -50,11 +55,6 @@ body .topo{
     text-align: center;
     justify-content: center;
 }   
-
-.logo img{
-    display: n  ne;
-    
-}
 
 /* ########################## BOTÃO LOGIN E MENU ########################## */
 
@@ -271,7 +271,7 @@ body .topo{
 .bg-modal{
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.7);
     position: absolute;
     top: 0px; /* para sobrepor o header */
     justify-content: center;
@@ -279,7 +279,6 @@ body .topo{
     display: none;
     animation-name: modal;
     animation-duration: 1s;
-    
 }
 
 .conteudo_logout{
@@ -301,7 +300,6 @@ body .topo{
 .conteudo_logout h4{
     grid-area: logout_header;
 }
-
 
 #b_desconecte-me{
     grid-area: b_desconecte-me;
@@ -357,9 +355,8 @@ body .topo{
 .close{
     position: absolute;
     color: #007bff;
-    top:-5px;
     opacity: 1;
-    font-size: 40px;
+    font-size: 25px;
     right: 6px;
     transform: rotate(45deg);
     cursor: pointer;
@@ -449,15 +446,13 @@ body .topo{
     padding-bottom: 5%;
 }
 
-
 .cont_label{
     background-color: rgb(216, 216, 216);
     border-top-left-radius:5px;
     border-top-right-radius:5px; 
     padding: 8px;
-
+    font-size: 20px;
 }
-
 
 .cont_style{
     margin-bottom: 10px;
@@ -467,11 +462,17 @@ body .topo{
     margin-bottom: 10px;
 }
 
-.cont_procu{}
+#dado_lan{
+    display: flex;
+}
 
-.cont_Mclas{}
+.cont_procu #procu{
+    display: flex;
+}
 
-
+.cont_Mclas #melhor{
+    display:flex;
+}
 
 /* ########################## pop-up do menu de registro ########################## */
 
@@ -489,12 +490,13 @@ body .topo{
     align-self: center;
     justify-content: center;
     align-items: center;
+    display: none;
 }
 
 .bg-modal_reg{
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.7);
     position: absolute;
     top: 0px; /* para sobrepor o header */
     justify-content: center;
@@ -504,13 +506,19 @@ body .topo{
     animation-duration: 1s;
 }
 
-
 .modal-content_reg{
-    width: 320px;
-    height: 580px;
+    width: 400px;
+    height: 656px;
     background-color: #FFFF;
     border-radius: 2%;
     position: relative;
+}
+
+@media (max-width: 400px){
+    .modal-content_reg{
+        width: 100%;
+        border-radius: 0px;
+    }    
 }
 
 .headerbox_reg{
@@ -521,9 +529,9 @@ body .topo{
     position: absolute;
     color: #007bff;
     opacity: 1;
-    font-size: 40px;
+    font-size: 25px;
     right: 9px;
-    top:-10px;
+    top:0px;
     transform: rotate(45deg);
     cursor: pointer;
 }
@@ -564,11 +572,180 @@ body .topo{
     display: flex;
 }
 
+/*######################## ÁREA DA CONTA ######################## */
 
+.conta{
+    position: absolute;
+    width: 550px;
+    background-color: rgba(0, 0, 0,0.8);
+    right: 0;
+    top: 50px;
+    display: none;
+    grid-gap: 3px;
+    grid-template-areas:
+        "picture"
+        "configuracoes"
+        "configuracoes"
+        "configuracoes";
+    justify-items: center;
+    align-items: center;
+    font-family: 'Open Sans';
+}
 
+.user_image{
+    grid-area: picture;
+    border-radius: 50%;
+    border: 3px solid #44DE70;
+    width: 130px;
+    height: 130px;
+    background-color: white;
+    margin: 40px auto;
+}
+.user_info{
+    grid-area: configuracoes;
+    background-color: rgba(99, 238, 196,0.8);
+    width: 100%;
+    padding: 20px 10px 0px 10%;
+    display: grid;
+    grid-template-areas:
+        "header1 header1 header1 header1"
+        "basic_info json_info json_info botoes1"
+        "info2 json_info2 json_info2 botoes2"
+        "header2 header2 header2 botao_rede"
+        "sociais sociais sociais botoes3";
+    grid-gap: 5px;
+}
 
+.btn-sm{
+    height: 20px;
+    font-size: 12px;
+    width: 70px;    
+    padding-top: 0px;
+}
 
+/* ///// linha 1 ///// */
+#header1{
+    grid-area: header1;
+    font-size: 22px;
+    font-weight: 700;
+    font-family: Kaushan Script;
+}
+.basic_info{
+    grid-area: basic_info;
+}
+.json_info{
+    grid-area: json_info;
+}
+.botoes1{
+    grid-area: botoes1;
+}
 
+/* ///// linha 2 ///// */
+.info2{
+    grid-area: info2;
+}
+.json_info2{
+    grid-area: json_info2;
+}
+.botoes2{
+    grid-area: botoes2;
+}
+
+/* ///// linha 3 ///// */
+#header2{
+    grid-area: header2;
+    font-size: 22px;
+    font-weight: 700;
+    font-family: Kaushan Script;
+}
+.sociais{
+    grid-area: sociais;
+}
+.botao_rede{
+    grid-area: botao_rede;
+    height: 20px;
+    width: 70px;
+    font-size: 12px;
+    right: 0;
+    padding-top: 0px;
+    background-color: white;
+    margin-top: 7px;
+}
+.botoes3{
+    grid-area: botoes3;
+}
+
+/* --------- Janelas de alteração --------- */
+
+.janelas_alteracao_containter{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    position: absolute;
+    top: 0px; /* para sobrepor o header */
+    justify-content: center;
+    align-items: center;
+    animation-name: modal;
+    animation-duration: 1s;
+    display: none;
+}
+.janelas_alteracao{
+    width: 310px;
+    height: 110px;
+    background-color: #515778;
+    position: relative;
+    padding: 10px 10px 0px 14px;
+    border-radius: 2%;
+}
+.janelas_alteracao label{
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+}
+.janelas_alteracao input{
+    margin-top: 5px;
+    margin-right: 5px;
+    width: 200px;
+    display: inline-flex;
+}
+.janelas_alteracao button{
+    margin-bottom: 5px;
+    background-color: #ffffff
+}
+
+#janela_add_rede .janelas_alteracao{
+    width: 335px;
+}
+
+#enviar_rede{
+    background-color: #28a745;
+}
+.close_alter{
+    position: absolute;
+    color: #ffffff;
+    opacity: 1;
+    font-size: 25px;
+    right: 9px;
+    top:0px;
+    transform: rotate(45deg);
+    cursor: pointer;
+}
+
+/* ------------ Responsividade ------------ */
+
+@media (max-width:800px){
+    .conta{
+        width: 400px;
+    }
+}
+@media (max-width: 450px){
+    .conta{
+        width: 100%;
+    }
+}
+.basic_span{
+    color: white;
+}
 /* ########################## CARROCEL ########################## */
 .carrocel{
     border: 1px solid rgb(216, 216, 216);
@@ -646,18 +823,17 @@ body .topo{
     display: none;
     animation-name: modal;
     animation-duration: 1s;
-
 }
 
 .bookdata{
     display: flex;
     flex-flow: column;
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
     border-radius: 10px;
     background: #fff;
     padding: 0px;
     width:500px ;
-    height: 1000px;
+    height: 90%;
     position: absolute;
     overflow: auto;
 }
@@ -674,6 +850,7 @@ body .topo{
 .titulo{
     width: 100%;
     font-size:20px;
+    font-family: 'Kaushan Script';
 }
 
 .closebook{
@@ -694,7 +871,7 @@ body .topo{
   /*border: 1px solid #000;*/
     margin-bottom:20px ;
     width: 100%;
-    height: 100%;
+    height: auto;
     overflow: auto;
 }
 
@@ -710,46 +887,100 @@ body .topo{
 
 .bd-a-capa{
     display: flex;
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
     width: 300px;
     height: auto;
     margin: 20px ;
 }
 
+
+
 .bd-a-capa img{
     width: 100%;
-
 }
 
 .bd-a-sinop{
     display: flex;
-    border: 1px solid #000;
-    width: auto;
+    flex-flow: column;
+    /*border: 1px solid #000;*/
+    width: auto;    
     height: fit-content;
     margin: 20px ;
-    font-size: 25px;
+    font-size: 15px;
 }
 
 .bd-b{
     display: flex;
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
     width: 100%;
     height: auto;   
 }
 
 .bd-b .info{
+    width: 100%;
+    /*border: 1px solid #000;*/
+} 
+
+
+ .bd-b .pond{
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+    /*border: 1px solid #000;*/
+
+ }
+
+ .pond .voto{
+    height: 100%;
+    /*border: 1px solid rgb(0, 0, 0);*/
+ }
+
+.voto .star{
+    display: flex;
 
 }
-.bd-b .pond{
 
+@media(min-width:760px){
+    .bd-a{
+        display: flex;
+        flex-flow:row; 
+    }
+    .bd-a-capa img{
+        width: auto;
+    }
+    
+    .bd-a-sinop{
+        width:100%;
+    }
 }
 
+/* ESTRELAS DE AVALIAÇÃO */
+
+.star i{
+    color:rgb(107, 107, 107);
+}
+
+
+/* BOTÃO DE PONDERAR */
+
+.pond .ponde{
+    height: 100%;
+    /*border: 1px solid #000;*/
+}
+.pond .ponde a{
+    padding:20px;
+    width: 200px;
+    border-radius: 5px;
+    background: rgb(99, 238, 196);
+}
 
 /* ########################## AREA DO FOOTER ########################## */
 
 footer div{
     border: 1px solid rgb(212, 212, 212);
+    background: rgb(99, 238, 196);
     height: 50px;
 }
+
 
 
